--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,4 +1,5 @@
 <%- include("partials/header"); -%>
     <h1>Contact</h1>
-    <p> <%= contactContent %> </p>
-<%- include("partials/footer"); -%>
+    <p>
+        <%= contactContent %> <a style="color: #3DB2FF;text-decoration: none;" href="mailto:ggyanam869@gmail.com">support@dailyjournal.com</a></p>
+    <%- include("partials/footer"); -%>
