--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,9 @@
 </div>
 <div class="footer-padding"></div>
 <div class="footer">
-    <p>Made with ❤️ by Gyanam's Neptune Technology Pvt. Ltd.</p>
+    <p>Made with ❤️ by Gyanam's Neptune Technology Pvt. Ltd.
+        <%= year %>
+    </p>
 </div>
 </div>
 </body>
