--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,23 +6,60 @@
     <link rel="shortcut icon" href="https://img.icons8.com/color-glass/48/000000/social-network.png" type="image/x-icon">
     <title>Daily Journal</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css">
-    <nav class="navbar">
-        <div class="container">
-            <div class="navbar-header">
-                <p class="navbar-brand">DAILY JOURNAL</p>
-            </div>
-            <ul class="nav navbar-nav navbar-right">
-                <li id="home"><a href="/">HOME</a></li>
-                <li id="about"><a href="/about">ABOUT US</a></li>
-                <li id="contact"><a href="/contact">CONTACT US</a></li>
-                <li id="compose"><a href="/compose">COMPOSE</a></li>
+    <script type="text/javascript">
+        var _smartsupp = _smartsupp || {};
+        _smartsupp.key = 'd252c0237411446338080b9083b2ca7312b3e144';
+        window.smartsupp || (function(d) {
+            var s, c, o = smartsupp = function() {
+                o._.push(arguments)
+            };
+            o._ = [];
+            s = d.getElementsByTagName('script')[0];
+            c = d.createElement('script');
+            c.type = 'text/javascript';
+            c.charset = 'utf-8';
+            c.async = true;
+            c.src = 'https://www.smartsuppchat.com/loader.js?';
+            s.parentNode.insertBefore(c, s);
+        })(document);
+    </script>
+</head>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">Daily Journal</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">HOME</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/about">ABOUT US</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/contact">CONTACT US</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://gyanam-blog.herokuapp.com/" target="_blank" rel="noopener noreferrer">BLOG 
+                        <span class="badge bg-secondary">NEW</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/news">NEWS 
+                        <span class="badge bg-secondary">NEW</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/compose">COMPOSE</a>
+                </li>
             </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
-    <body>
-        <div class="container">
+<body>
+    <div class="container">
