--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,17 +29,14 @@ body {
     border-radius: 10px;
 }
 
-.footer-padding {
-    padding-bottom: 60px;
-}
-
 .footer {
     position: absolute;
     text-align: center;
     bottom: 0;
     width: 100%;
     height: 60px;
-    background-color: #1abc9c;
+    background-color: #0099ff;
+    position: fixed;
 }
 
 .footer p {
@@ -56,7 +53,6 @@ body {
     padding: 10px;
     border-radius: 10px;
     background-color: #ffffff;
-    border: 1px solid rgb(185, 185, 185);
 }
 
 .title-header {
@@ -99,4 +95,28 @@ body {
     font-size: 18px;
     font-weight: 600;
     font-family: 'Montserrat', sans-serif;
+}
+
+.go-to-post {
+    width: 50%;
+    padding: 15px;
+    border-radius: 10px;
+    background-color: #ffffff;
+}
+
+.compose-a-post {
+    padding: 10px;
+    width: 100%;
+    border-radius: 30px;
+    background-color: rgb(223, 223, 223);
+}
+
+.compose-a-post a {
+    color: grey;
+    cursor: text;
+    text-decoration: none;
+}
+
+.compose-a-post a:hover {
+    color: grey;
 }
