--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,11 +1,15 @@
 <%- include("partials/header"); -%>
-
     <center>
-        <h1>Home</h1>
+        <h1 style="font-size: 18px;">Home</h1>
+        <div class="go-to-post">
+            <h3 style="margin-top: -10px;" class="text-primary">Compose</h3>
+            <div class="compose-a-post">
+                <a href="/compose">Write your journal...</a>
+            </div>
+        </div>
     </center>
     <p>
         <%= startingContent %>
-            <a href="/compose" class="btn btn-primary">Compose</a>
     </p>
 
     <div class="container all-posts">
@@ -27,7 +31,13 @@
                             <%=post.content.substring(0, 150) + " ..."%>
                                 <a class="text-read-more" href="/posts/<%=post._id%>">Read More</a>
                         </p>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <div class="fb-share-button" data-href="https://blog-jouranl.herokuapp.com/posts/<%= post._id %> " data-layout="button" data-size="large">
+                            <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fblog-jouranl.herokuapp.com%2Fposts%2F<%= post._id %>&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                                <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+                            </svg>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
