--- a/views/post.ejs
+++ b/views/post.ejs
@@ -7,6 +7,13 @@
                     &nbsp;&nbsp;
             </h1>
             <span class="text-muted" id="authorName">Author: <%= author %> </span>
+            <div style="float: right;" class="fb-share-button" data-href="https://blog-jouranl.herokuapp.com/posts/<%= id %> " data-layout="button" data-size="large">
+                <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fblog-jouranl.herokuapp.com%2Fposts%2F<%= id %>&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                    <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+                </svg>
+                </a>
+            </div>
         </center>
         <hr>
         <br><br>
