--- a/views/404.ejs
+++ b/views/404.ejs
@@ -12,6 +12,8 @@
 
 <body>
     <center>
+        <img width="100px" height="100px" src="https://img.icons8.com/color-glass/48/000000/social-network.png" alt="Logo">
+        <p class="text-muted">Daily Journal</p>
         <h1>Not Found</h1>
         <a href="/" class="btn btn-primary">Back to home</a>
     </center>
