--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,17 @@
 <%- include("partials/header"); -%>
     <h1>About</h1>
-    <p> <%= aboutContent %> </p>
+    <p>
+        <%= aboutContent %>
+    </p>
+    <p>
+        Founder and CEO of Neptune Technology and Daily Journal is <b>Gyanam Gogoi</b>
+    </p>
+    <p>Co-Founders are <b>None ( Finding )</b></p>
+    <p>
+        Sub Companies are
+        <b>ProVido ( Social Networking ), ProVido Messenger ( Message and Video
+    calling ), AI-Croma ( Realtime AI Face Filter ), AI Baby Monitor ( Baby
+    Surveillance ), Skoolclub ( School Collaber )</b
+  >
+</p>
 <%- include("partials/footer"); -%>
