--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -11,27 +11,7 @@
             <input class="form-control" type="text" name="postTitle" placeholder="Title" required>
             <label>Author Name</label>
             <input class="form-control" type="text" name="authorName" placeholder="Author name" required>
-            <!-- <div class="row">
-                <div class="col-lg-3">
-                    <label>Author Name</label>
-                    <input class="form-control" type="text" name="authorName" placeholder="Author name" required>
-                </div>
-                <div class="col-lg-3">
-                    <label>Profile Image URL</label>
-                    <input class="form-control" type="text" name="profile" placeholder="Profile image URL" required>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-3">
-                    <label>1 Image URL</label>
-                    <input type="text" name="imageURL" class="form-control">
-                </div>
-                <div class="col-lg-3">
-                    <label>2 Image URL</label>
-                    <input type="text" name="2imageURL" class="form-control">
-                </div>
-            </div> -->
-            <label>Image URL</label>
+            <label>Image URL (You can use random images copy this link https://source.unsplash.com/random)</label>
             <input type="text" name="imageURL" class="form-control" placeholder="Image URL">
             <label>Post</label>
             <textarea class="form-control" name="postBody" rows="5" cols="30" placeholder="Captions" required></textarea>
