--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,7 +28,9 @@
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Daily Journal</a>
+        <a class="navbar-brand" href="/">
+            <img src="https://img.icons8.com/color-glass/48/000000/social-network.png" alt="Logo" class="img-fluid">
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -50,11 +52,17 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/news">NEWS 
-                        <span class="badge bg-secondary">NEW</span>
+                        <span class="badge bg-success">NEW</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/compose">COMPOSE</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/new/global-chat/" class="nav-link">GLOBAL CHAT
+                        <span class="badge bg-primary">COMING SOON</span>
+                    </a>
+
                 </li>
             </ul>
         </div>
