--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,10 +17,14 @@
             <div class="post-div">
                 <div class="row">
                     <div class="col-lg-6">
-                        <div style="background-image: url('<%= post.image %>');" class="thumbnail"></div>
-                        <p class="text-muted" style="font-family: 'Besley', serif;">Author:
-                            <%= post.author %>
-                        </p>
+                        <div style="background-image: url('<%= post.image %>');" class="img-fluid img-thumbnail"></div>
+                        <span class="text-muted" id="authorName">Posted by 
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                            </svg>
+                             <%= post.author %> 
+                        </span>
                     </div>
                     <div class="col-lg-6">
                         <h1 style="font-family: 'Besley', serif;">
@@ -34,8 +38,8 @@
                         <div class="fb-share-button" data-href="https://blog-jouranl.herokuapp.com/posts/<%= post._id %> " data-layout="button" data-size="large">
                             <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fblog-jouranl.herokuapp.com%2Fposts%2F<%= post._id %>&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
-                                <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
-                            </svg>
+                                    <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+                                </svg>
                             </a>
                         </div>
                     </div>
