--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -137,3 +137,11 @@ body {
     font-weight: 500;
     cursor: not-allowed;
 }
+
+.banner-img {
+    width: 100%;
+    height: 300px;
+    padding: 10px;
+    border-radius: 5px;
+    color: #fff;
+}
