--- a/views/globalcompose.ejs
+++ b/views/globalcompose.ejs
@@ -1,18 +1,25 @@
 <%- include("partials/header") -%>
     <center>
-        <h3 style="font-family: 'Montserrat', sans-serif;">Global Chat Coming Soon</h3>
+        <h3 style="font-family: 'Montserrat', sans-serif;">Learn NodeJS in one video meeting.</h3>
         <div class="coming-soon-div">
-            <p style="font-size: 25px;font-weight: 600;" class="text-success" id="demo"></p>
-            <button id="g-chat" class="btn btn-primary disabled">Register Now 
+            <p style="font-size: 25px;font-weight: 600;" class="text-success" id="demo">Meeting start on 14 September
+                <%= year %>
+            </p>
+            <button title="Meeting button is disable. It will be open on 14 Sept 2021" id="g-chat" onclick="meet();" class="btn btn-primary disabled">Enter Meeting
                 <img width="30" height="30" src="https://img.icons8.com/color-glass/48/000000/social-network.png" alt="Logo" class="img-fluid">
             </button>
-            <p class="text-muted">Registration open on 15 September
+            <p class="text-muted">Only limited seats
                 <%= year %>
             </p>
             <h5 class="text-primary">Support? support@dailyjournal.com</h5>
         </div>
     </center>
     <script>
+        function meet() {
+            window.open('');
+        }
+    </script>
+    <!-- <script>
         var countDownDate = new Date("2 Oct, 2021 15:37:25").getTime();
 
         var x = setInterval(function() {
@@ -34,6 +41,6 @@
                 document.getElementById("demo").innerHTML = "EXPIRED";
             }
         }, 1000);
-    </script>
+    </script> -->
 
     <%- include("partials/footer") -%>
