--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -59,8 +59,8 @@
                     <a class="nav-link" href="/compose">COMPOSE</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/new/global-chat/" class="nav-link">GLOBAL CHAT
-                        <span class="badge bg-primary">COMING SOON</span>
+                    <a href="/courses/all/" class="nav-link">G-COURSES
+                        <span class="badge bg-primary">NEW</span>
                     </a>
 
                 </li>
