--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -9,8 +9,10 @@
             <input class="form-control" type="text" name="postSub" placeholder="Subtitle" required>
             <label>Author Name</label>
             <input class="form-control" type="text" name="authorName" placeholder="Author name" required>
+            <label>Author Image</label>
+            <input type="text" name="profile" class="form-control" placeholder="Author image URL">
             <label>Banner</label>
-            <input type="text" name="banner" class="form-control" placeholder="Banner image URL">
+            <input type="text" name="banner" class="form-control" placeholder="Banner image URL" required>
             <label>Image URL (You can use random images copy this link https://source.unsplash.com/random)</label>
             <input type="text" name="imageURL" class="form-control" placeholder="Image URL">
             <label>Post</label>
