--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,16 +1,63 @@
-<%- include("partials/header"); -%>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+
+<head>
+    <meta charset="utf-8">
+    <link rel="shortcut icon" href="https://img.icons8.com/color-glass/48/000000/social-network.png" type="image/x-icon">
+    <title>
+        <%= author %> Daily Journal</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/post.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <script type="text/javascript">
+        var _smartsupp = _smartsupp || {};
+        _smartsupp.key = 'd252c0237411446338080b9083b2ca7312b3e144';
+        window.smartsupp || (function(d) {
+            var s, c, o = smartsupp = function() {
+                o._.push(arguments)
+            };
+            o._ = [];
+            s = d.getElementsByTagName('script')[0];
+            c = d.createElement('script');
+            c.type = 'text/javascript';
+            c.charset = 'utf-8';
+            c.async = true;
+            c.src = 'https://www.smartsuppchat.com/loader.js?';
+            s.parentNode.insertBefore(c, s);
+        })(document);
+    </script>
+</head>
+
+<body style="background: whitesmoke;">
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="/">
+            <img src="https://img.icons8.com/color-glass/48/000000/social-network.png" alt="Logo" class="img-fluid" style="margin-left: 10px;">
+        </a>
+        <ul style="text-align: center;font-size: 20px;font-weight: 500;" class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li style="text-align: center;text-transform: uppercase;" class="text-primary">
+                <%= author %>
+            </li>
+        </ul>
+    </nav>
 
     <div class="container post-contain">
         <center>
             <div class="banner-img" style="background-image: url('<%= banner %>');">
+                <button onclick="back();" style="border-radius: 50%;float: left;" class="btn btn-secondary" href="/">
+                    <i style="font-size: 20px;" class="fa fa-arrow-left"></i>
+                </button>
                 <h1 style="font-family: 'Besley', serif;">
                     <%=title%>
                         &nbsp;&nbsp;
                 </h1>
-                <p class="text-light">
+                <p>
                     <%= subtitle %>
                 </p>
-                <span>Posted by 
+                <div class="profile-img img-responsive mt-3" alt="<%= author %>" data-toggle="tooltip" data-placement="top" title="<%= author %> " style="background-image: url('<%= profile %>');"></div>
+                <br>
+                <span class="mt-3">Posted by 
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                         <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                         <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
@@ -39,5 +86,22 @@
             </div>
         </div>
     </div>
+    <div class="container mt-3 watermark">
+        <center>
+            <h3 class="text-primary text-capitalize">watermark
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-droplet-half" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M7.21.8C7.69.295 8 0 8 0c.109.363.234.708.371 1.038.812 1.946 2.073 3.35 3.197 4.6C12.878 7.096 14 8.345 14 10a6 6 0 0 1-12 0C2 6.668 5.58 2.517 7.21.8zm.413 1.021A31.25 31.25 0 0 0 5.794 3.99c-.726.95-1.436 2.008-1.96 3.07C3.304 8.133 3 9.138 3 10c0 0 2.5 1.5 5 .5s5-.5 5-.5c0-1.201-.796-2.157-2.181-3.7l-.03-.032C9.75 5.11 8.5 3.72 7.623 1.82z"/>
+                    <path fill-rule="evenodd" d="M4.553 7.776c.82-1.641 1.717-2.753 2.093-3.13l.708.708c-.29.29-1.128 1.311-1.907 2.87l-.894-.448z"/>
+                </svg>
+            </h3>
+            <h4 class="text-dark">From Daily Journal</h4>
+        </center>
+    </div>
+
+    <script>
+        function back() {
+            window.location = '/';
+        }
+    </script>
 
     <%- include("partials/footer"); -%>
