--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,8 +10,10 @@
     <p>
         Sub Companies are
         <b>ProVido ( Social Networking ), ProVido Messenger ( Message and Video
-    calling ), AI-Croma ( Realtime AI Face Filter ), AI Baby Monitor ( Baby
-    Surveillance ), Skoolclub ( School Collaber )</b
-  >
-</p>
-<%- include("partials/footer"); -%>
+    calling ), Neptune Conferrence ( Video Conferrence App ), AI-Croma ( Realtime AI Face Filter ), AI Baby Monitor ( Baby
+    Surveillance ), Skoolclub ( School Collaber )</b>
+    </p>
+    <center>
+        <p class="text-muted">Daily Journal v4.1.0</p>
+    </center>
+    <%- include("partials/footer"); -%>
