--- a/views/post.ejs
+++ b/views/post.ejs
@@ -37,6 +37,7 @@
         </a>
         <ul style="text-align: center;font-size: 20px;font-weight: 500;" class="navbar-nav me-auto mb-2 mb-lg-0">
             <li style="text-align: center;text-transform: uppercase;" class="text-primary">
+                This Blog Posted by
                 <%= author %>
             </li>
         </ul>
@@ -74,8 +75,9 @@
             <%=content%>
         </p>
         <div>
-            <div>
-                <h3 class="text-dark">Share</h3>
+            <h3 class="text-dark">Share</h3>
+            <!-- <div>
+                
                 <div class="fb-share-button" data-href="https://blog-jouranl.herokuapp.com/posts/<%= id %> " data-layout="button" data-size="large">
                     <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fblog-jouranl.herokuapp.com%2Fposts%2F<%= id %>&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
@@ -83,7 +85,10 @@
                         </svg>
                     </a>
                 </div>
-            </div>
+            </div> -->
+
+            <div class="addthis_inline_share_toolbox"></div>
+
         </div>
     </div>
     <div class="container mt-3 watermark">
@@ -94,9 +99,12 @@
                     <path fill-rule="evenodd" d="M4.553 7.776c.82-1.641 1.717-2.753 2.093-3.13l.708.708c-.29.29-1.128 1.311-1.907 2.87l-.894-.448z"/>
                 </svg>
             </h3>
-            <h4 class="text-dark">From Daily Journal</h4>
+            <h4 class="text-dark">From Daily Journal
+                <img src="https://img.icons8.com/color-glass/48/000000/social-network.png" alt="Logo" class="img-fluid" style="margin-left: 10px;">
+            </h4>
         </center>
     </div>
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-613e3c91bc28ce24"></script>
 
     <script>
         function back() {
